--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,12 @@
-<html>
-<header>
-  <title>createam labs test services</title>
-</header>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <title>createam test services</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
 <body>
-  <h1>It works!</h1>
+
+<h1 th:text="${message}"></h1>
+
 </body>
 </html>
