--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,46 +1,30 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-  <title>createam test services</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <title>createam test services 💡</title>
 </head>
 <body>
 
-<h1 th:text="${message}"></h1>
+<h1 th:text="${greetings}" style="margin: 5%;"></h1>
 
-<div class="card" style="margin: 10%;">
-  <div class="card-body">
-    <h5 class="card-title">process details</h5>
-    <code th:text="${processInfo}"></code>
-  </div>
+<div class="card card-body code" style="margin: 5%;">
+  <h6 th:text="#{index.details}"></h6>
+  <code th:text="${message}"></code>
 </div>
 
-<div class="card" style="margin: 10%;">
-  <div class="card-body">
-    <h5 class="card-title">https://createam-labs.herokuapp.com/actuator/</h5>
-    <code th:text="${actuator}"></code>
-  </div>
-</div>
 
-<div class="card" style="margin: 10%;">
-  <div class="card-body">
-    <h5 class="card-title">https://createam-labs.herokuapp.com/info/</h5>
-    <code th:text="${info}"></code>
-  </div>
-</div>
-
-<div class="card" style="margin: 10%;">
-  <div class="card-body">
-    <h5 class="card-title">https://createam-labs.herokuapp.com/health/</h5>
-    <code th:text="${health}"></code>
-  </div>
-</div>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
