--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,6 @@
   <title>createam sample app</title>
 </head>
 <body>
-<h1 th:text="${message}" style="margin: 5%;"></h1>
+{{message}}
 </body>
 </html>
